Updated mailing list, Youtube background.

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
             <div class="overlay">
 
                 <!-- Youtube Video Header Background -->
-                <div id="P1" class="player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'https://www.youtube.com/watch?v=5jpfHwy4Ndk',containment:'#top',startAt:0,mute:true,autoPlay:true,loop:false,opacity:0.75}"></div>
-
+                <div id="P1" class="player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'http://youtu.be/e8DFN3m8XGQ',containment:'#top',startAt:0,mute:true,autoPlay:true,loop:false,opacity:1}"></div>
 
                 <!-- =========================================
                      Navigation
@@ -134,7 +133,6 @@
                                 <!-- Learn More Buttons -->
                                 <div class="btn-box">
                                     <a href="#about" class="btn btn-ghost scrollto">Learn More</a>
-                                    <a href="#canvas-bg" class="btn btn-white scrollto"><i class="icon arrow_carrot-2dwnn_alt"></i>Sign up for the Beta</a>
                                 </div>
 
                             </div><!-- /End Intro-Section -->
