Updated Aditya's title.

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                                 </div>
                             </div>
                             <h4>Aditya Surabi</h4>
-                            <p class="team-bio"><span class="text-color">Lead backend developer</span>, digital zen master of solitude and back-end systems programming and co-founder of Wave. Connoisseur of culturally relevant tv shows, Wu-tang die-hard and resolute stance against ever downloading Pokemon Go.</p>
+                            <p class="team-bio"><span class="text-color">Full-stack developer</span>, digital zen master of solitude and back-end systems programming and co-founder of Wave. Connoisseur of culturally relevant tv shows, Wu-tang die-hard and resolute stance against ever downloading Pokemon Go.</p>
                         </div>
                     </div><!-- /End Row -->
                 </div><!-- End Wrapper -->
