Team bio updates.

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                                 </div>
                             </div>
                             <h4>Ivan Ng</h4>
-                            <p class="team-bio"><span class="text-color">Chief executive officer</span>, former founder of Flock and now Business Development Strategist and co-founder of Wave. Lives for growth and cigarettes. A resolute believer that pancakes are the cornerstone of civilization and the breakfast of champions. Given the chance will drag you to the best and worst summer Hollywood blockbusters, and lives his life in black.</p>
+                            <p class="team-bio"><span class="text-color">Chief executive officer</span>, business development strategist, and co-founder of Wave. Lives for growth and cigarettes. A resolute believer that pancakes are the cornerstone of civilization and the breakfast of champions. Given the opportunity, will drag you to the best- and worst summer Hollywood blockbusters. Lives his life in black.</p>
                         </div>
                         <!-- Team Box -->
                         <div class="col-sm-4 team-box">
@@ -505,7 +505,7 @@
                                 </div>
                             </div>
                             <h4>Nicole Boudreau</h4>
-                            <p class="team-bio"><span class="text-color">Chief operating officer</span>, trusted advisor, confidant and strategist, an expert in operations and people management. Beautiful as she is smart and 1/2 of the Boudreau twins. Specializing in scrutinizing Ivan’s thinking and catching his errors and calling him out.</p>
+                            <p class="team-bio"><span class="text-color">Chief operating officer</span>, trusted advisor, confidant, and strategist. An expert in operations and people management. Beautiful as she is smart, and the first half of the Boudreau twins- Nicole specializes in scrutinizing Ivan's thinking, and catching his errors.</p>
                         </div>
                         <!-- Team Box -->
                         <div class="col-sm-4 team-box">
@@ -539,7 +539,7 @@
                                 </div>
                             </div>
                             <h4>Aidan Boudreau</h4>
-                            <p class="team-bio"><span class="text-color">Chief marketing officer</span>, artist, designer and the future Mark Rothko helming conceptual design and social net content strategy. The 2/2 of the Boudreau twins, equally as beautiful as her talent in watercolour painting, photography and sketches, bringing nuance and depth in our execution.</p>
+                            <p class="team-bio"><span class="text-color">Chief marketing officer</span>, artist, designer, and the future Mark Rothko. Aidan leads the conceptual design and social content strategy. As the second half of the Boudreau twins, her beauty is matched only by her artistic talent. Her expertise in the use of watercolours, photography, and sketches adds nuance and depth into our daily execution.</p>
                         </div>
                         <!-- Team Box -->
                         <div class="col-sm-4 team-box">
