Changed video opacity to 75%, set video to loop.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="overlay">
 
                 <!-- Youtube Video Header Background -->
-                <div id="P1" class="player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'https://www.youtube.com/watch?v=5jpfHwy4Ndk',containment:'#top',startAt:0,mute:true,autoPlay:true,loop:false,opacity:1}"></div>
+                <div id="P1" class="player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'https://www.youtube.com/watch?v=5jpfHwy4Ndk',containment:'#top',startAt:0,mute:true,autoPlay:true,loop:true,opacity:0.75}"></div>
 
                 <!-- =========================================
                      Navigation
