Added Facebook post images.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="utf-8">
 
+    <!-- Facebook metadata -->
+    <meta property="og:image" content="http://wvmsc.com/assets/images/wvmsc-web-invisible.jpg" />
+    <meta property="og:description" content="Wave is a platform that allows fans and musicians to engage with each other by enabling fans to vote for their favourite musicians, and for musicians to know where their fans are coming from." />
+    <meta property="og:url"content="http://wvmsc.com" />
+    <meta property="og:title" content="Wave | Crowdfunding the shows you want to see" />
+
     <!-- TITLE OF SITE -->
     <title>Wave | Crowdfunding the shows you want to see</title>
 
