Updated Ivan’s bio.

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                                 </div>
                             </div>
                             <h4>Ivan Ng</h4>
-                            <p class="team-bio"><span class="text-color">Chief executive officer</span>, business development strategist, and co-founder of Wave. Lives for growth and cigarettes. A resolute believer that pancakes are the cornerstone of civilization and the breakfast of champions. Given the opportunity, will drag you to the best- and worst summer Hollywood blockbusters. Lives his life in black.</p>
+                            <p class="team-bio"><span class="text-color">Chief executive officer</span>, business development strategist, and co-founder of Wave. Resident contrarian, always focused on growth and funding to "keep the lights on". Believes competition is for losers, and cockroaches are better than unicorns.</p>
                         </div>
                         <!-- Team Box -->
                         <div class="col-sm-4 team-box">
@@ -439,7 +439,7 @@
                                 </div>
                             </div>
                             <h4>Joel Lee</h4>
-                            <p class="team-bio"><span class="text-color">Chief creative officer</span>, musician, design extraordinaire and co-founder of Wave. Ivan’s counterpart- managing and executing all things creative. Avid fan of industrial techno and italo disco tracks. Joel lives his life in black, and is renowned for his love/hate relationship with carbs.</p>
+                            <p class="team-bio"><span class="text-color">Chief creative officer</span>, musician, design extraordinaire, and co-founder of Wave. Ivan’s counterpart- managing and executing all things creative. Avid fan of industrial techno and italo disco tracks. Joel lives his life in black, and is renowned for his love/hate relationship with carbs.</p>
                         </div>
                     <!-- Team Box -->
                     <div class="col-sm-4 team-box">
