Removed Joel as a team member.
Former bio: Chief creative officer, musician, design extraordinaire, and co-founder of Wave. Ivan’s counterpart- managing and executing all things creative. Avid fan of industrial techno and italo disco tracks. Joel lives his life in black, and is renowned for his love/hate relationship with carbs.

--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
                     </div>
                     <div class="row">
                         <!-- Team Box -->
+                        <div class="col-sm-2 team-box"></div>
                         <div class="col-sm-4 team-box">
                             <div class="team-img">
                                 <img src="assets/images/ivan-headshot.jpg" class="img-responsive" alt="">
@@ -418,40 +419,6 @@
                             </div>
                             <h4>Ivan Ng</h4>
                             <p class="team-bio"><span class="text-color">Chief executive officer</span>, business development strategist, and co-founder of Wave. Resident contrarian, always focused on growth and funding to "keep the lights on". Believes competition is for losers, and cockroaches are better than unicorns.</p>
-                        </div>
-                        <!-- Team Box -->
-                        <div class="col-sm-4 team-box">
-                            <div class="team-img">
-                                <img src="assets/images/joel-headshot.jpg" class="img-responsive" alt="">
-                                <div class="img-overlay">
-                                  <div class="img-icons">
-                                    <!--
-                                    <span class="icon-white">
-                                        <a href="#">
-                                            <i class="icon social_facebook_square"></i>
-                                        </a>
-                                    </span>
-                                    <span class="icon-white">
-                                        <a href="#">
-                                            <i class="icon social_twitter_square"></i>
-                                        </a>
-                                    </span>
-                                    <span class="icon-white">
-                                        <a href="#">
-                                            <i class="icon social_youtube_square"></i>
-                                        </a>
-                                    </span>
-                                    <span class="icon-white">
-                                        <a href="#">
-                                            <i class="icon social_instagram_square"></i>
-                                        </a>
-                                    </span>
-                                  -->
-                                  </div>
-                                </div>
-                            </div>
-                            <h4>Joel Lee</h4>
-                            <p class="team-bio"><span class="text-color">Chief creative officer</span>, musician, design extraordinaire, and co-founder of Wave. Ivan’s counterpart- managing and executing all things creative. Avid fan of industrial techno and italo disco tracks. Joel lives his life in black, and is renowned for his love/hate relationship with carbs.</p>
                         </div>
                     <!-- Team Box -->
                     <div class="col-sm-4 team-box">
@@ -488,6 +455,7 @@
                         <p class="team-bio"><span class="text-color">Chief technology officer</span>, and resident programming prodigy. Specializing in the full-stack development of the Wave mobile platform. Has a love/hate relationship with buzzwords. When not at Wave HQ, Zach can be found sailing, cooking, and discovering local craft beers.</p>
                     </div>
                   </div>
+                  <div class="col-sm-2 team-box"></div>
                     <!-- /End Row -->
                     <br><br>
                     <div class="row">
