Updated titles, removed Aditya.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="http://wvmsc.com/assets/images/wvmsc-web-invisible.jpg" />
     <meta property="og:description" content="Wave is a platform that allows fans and musicians to engage with each other by enabling fans to vote for their favourite musicians, and for musicians to know where their fans are coming from." />
     <meta property="og:url"content="http://wvmsc.com" />
-    <meta property="og:title" content="Wave | Crowdfunding the shows you want to see" />
+    <meta property="og:title" content="Wave Music | Crowdfunding the shows you want to see" />
 
     <!-- TITLE OF SITE -->
     <title>Wave | Crowdfunding the shows you want to see</title>
@@ -452,7 +452,7 @@
                             </div>
                         </div>
                         <h4>Zachary Yale</h4>
-                        <p class="team-bio"><span class="text-color">Chief technology officer</span>, and resident programming prodigy. Specializing in the full-stack development of the Wave mobile platform. Has a love/hate relationship with buzzwords. When not at Wave HQ, Zach can be found sailing, cooking, and discovering local craft beers.</p>
+                        <p class="team-bio"><span class="text-color">Full stack developer</span>, and resident programming prodigy. Specializing in the full-stack development of the Wave mobile platform. Has a love/hate relationship with buzzwords. When not at Wave HQ, Zach can be found sailing, cooking, and discovering local craft beers.</p>
                     </div>
                   </div>
                   <div class="col-sm-2 team-box"></div>
@@ -528,39 +528,13 @@
                             <p class="team-bio"><span class="text-color">Chief marketing officer</span>, artist, designer, and the future Mark Rothko. Aidan leads the conceptual design and social content strategy. As the second half of the Boudreau twins, her beauty is matched only by her artistic talent. Her expertise in the use of watercolours, photography, and sketches adds nuance and depth into our daily execution.</p>
                         </div>
                         <!-- Team Box -->
-                        <div class="col-sm-4 team-box">
+                        <!-- <div class="col-sm-4 team-box">
                             <div class="team-img">
                                 <img src="assets/images/aditya-headshot.jpg" class="img-responsive" alt="">
-                                <div class="img-overlay">
-                                  <div class="img-icons">
-                                    <!--
-                                    <span class="icon-white">
-                                        <a href="#">
-                                            <i class="icon social_facebook_square"></i>
-                                        </a>
-                                    </span>
-                                    <span class="icon-white">
-                                        <a href="#">
-                                            <i class="icon social_twitter_square"></i>
-                                        </a>
-                                    </span>
-                                    <span class="icon-white">
-                                        <a href="#">
-                                            <i class="icon social_youtube_square"></i>
-                                        </a>
-                                    </span>
-                                    <span class="icon-white">
-                                        <a href="#">
-                                            <i class="icon social_instagram_square"></i>
-                                        </a>
-                                    </span>
-                                  -->
-                                  </div>
-                                </div>
                             </div>
                             <h4>Aditya Surabi</h4>
                             <p class="team-bio"><span class="text-color">Full-stack developer</span>, digital zen master of solitude, and co-founder of Wave. Connoisseur of culturally relevant TV shows, Wu-Tang die-hard, and resolute in his stance against ever downloading Pokémon Go.</p>
-                        </div>
+                        </div> -->
                     </div><!-- /End Row -->
                 </div><!-- End Wrapper -->
             </div><!--/End Container -->
